--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -3,25 +3,29 @@ name: Bandit
 on:
   push:
     branches: [main]
-
 permissions:
   security-events: write
+  # only required for workflows in private repositories
   actions: read
   contents: read
 
 jobs:
   analyze:
-    runs-on: ubuntu-latest
-
+    runs-on:
+      ubuntu-latest
+      # required for all workflows
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          persist-credentials: false
 
       - name: Perform Bandit Analysis
-        uses: PyCQA/bandit-action@76b022e9991eedaa7e2fb8f198dcbfe3e17c79ad
+        uses: PyCQA/bandit-action@67a458d90fa11fb1463e91e7f4c8f068b5863c7f
         with:
+          # Scans current directory (default)
           targets: "."
+
+          # Default report for severity issues
           severity: "all"
+
+          # Default report for confidence issues
           confidence: "all"
